Fix layout issue on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -41,6 +41,19 @@
   padding-bottom: 20px;
 }
 
+@media (max-width: 479px) {
+  .onfido-container {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  .onfido-container .onfido-sdk-ui-Modal-inner {
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+  }
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
